[tool.poetry]
name = "publish"
version = "1.0.0"
description = ""
authors = ["tota"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^5.1.1"
mkdocs = "^1.1"
mkdocs-roamlinks-plugin = "^0.1.3"
mkdocs-exclude = "^1.0.2"
GitPython = "^3.1.26"
mkdocs-git-revision-date-plugin = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# black,pylint,isortの競合回避
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326, C0114, C0115, C0116"

[tool.pylint.format]
max-line-length = "88"